--- a/app/Tasks Overview List Detail.content.0.json
+++ b/app/Tasks Overview List Detail.content.0.json
@@ -1,7 +1,7 @@
 {
     "type": "WizardScriptElement",
     "config": {
-        "script": "return function(viewer, element, parentModule){\n    var div = new Element('div',{\"class\":\"section-title\"});\n    div.appendChild(new Element(\"span\",{\"html\":\"Tasks\"}));\n    element.appendChild(div);\n}",
+        "script": "\n    var mod = new ElementModule('div',{\"class\":\"section-title\"});\n    mod.getElement().appendChild(new Element(\"span\",{\"html\":\"Tasks\"}));\n    return mod;",
         "identifier": "customScriptElement"
     }
 }
