--- a/app/emptyTasksList.content.0.json
+++ b/app/emptyTasksList.content.0.json
@@ -1,13 +1,26 @@
 {
-    "type": "DefaultDescription",
+    "type": "FormattedText",
     "config": {
+        "textValueScript": "ProjectTeam.CurrentTeam().runOnceOnLoad(function(team){\n    var proposals=team.getProposals();\n    var tasks=[];\n    proposals.forEach(function(prop){\n        tasks=tasks.concat(prop.getTasks());\n    })\n    callback(tasks.length==0?\n        \"You currently have no tasks, to get started, create a project. Watch this video https:\/\/www.youtube.com\/watch?v=1IkY0_qONRk\":\n        \"\");\n })",
         "className": "",
         "imageWidth": 300,
         "imageHeight": 240,
         "multiImageWidth": 100,
         "multiImageHeight": 75,
+        "portraitImageWidth": 75,
+        "portraitImageHeight": 100,
         "autoArrange": true,
         "oneLine": true,
-        "maxChars": 0
+        "maxChars": 0,
+        "maxWidth": 0,
+        "showAudios": true,
+        "showVideos": true,
+        "showDocuments": true,
+        "showImages": true,
+        "showLinks": true,
+        "showExternalContent": true,
+        "embedPortrait": true,
+        "preferLocalContent": true,
+        "portraitClip": true
     }
 }
