--- a/app/emptyProjectOverviewDetail.content.0.json
+++ b/app/emptyProjectOverviewDetail.content.0.json
@@ -1,13 +1,26 @@
 {
-    "type": "DefaultDescription",
+    "type": "FormattedText",
     "config": {
+        "textValueScript": "return \"<h2>hello world www.google.com <\/h2>\"",
         "className": "",
         "imageWidth": 300,
         "imageHeight": 240,
         "multiImageWidth": 100,
         "multiImageHeight": 75,
+        "portraitImageWidth": 75,
+        "portraitImageHeight": 100,
         "autoArrange": true,
         "oneLine": true,
-        "maxChars": 0
+        "maxChars": 0,
+        "maxWidth": 0,
+        "showAudios": true,
+        "showVideos": true,
+        "showDocuments": true,
+        "showImages": true,
+        "showLinks": true,
+        "showExternalContent": true,
+        "embedPortrait": true,
+        "preferLocalContent": true,
+        "portraitClip": true
     }
 }
