nickola -- Auto Commit - Changes made through Administrator Interface

--- a/app/emptyProjectOverviewDetail.content.0.json
+++ b/app/emptyProjectOverviewDetail.content.0.json
@@ -1,7 +1,7 @@
 {
     "type": "FormattedText",
     "config": {
-        "textValueScript": "return \"<h2>hello world www.google.com <\/h2>\"",
+        "textValueScript": "return \"Watch this video https:\/\/www.youtube.com\/watch?v=1IkY0_qONRk\";\n ",
         "className": "",
         "imageWidth": 300,
         "imageHeight": 240,
