nickola -- Auto Commit - Changes made through Administrator Interface

--- a/app/emptyTasksList.content.0.json
+++ b/app/emptyTasksList.content.0.json
@@ -1,7 +1,7 @@
 {
     "type": "InlineHtml",
     "config": {
-        "className": "",
+        "className": "section-title",
         "text": "Get Started With Tasks",
         "template": "",
         "templateVariablesScript": ""
