--- a/app/emptyProjectOverviewDetail.content.0.json
+++ b/app/emptyProjectOverviewDetail.content.0.json
@@ -1,26 +1,9 @@
 {
-    "type": "FormattedText",
+    "type": "InlineHtml",
     "config": {
-        "textValueScript": "return \"Watch this video https:\/\/www.youtube.com\/watch?v=1IkY0_qONRk\";\n ",
-        "className": "",
-        "imageWidth": 300,
-        "imageHeight": 240,
-        "multiImageWidth": 100,
-        "multiImageHeight": 75,
-        "portraitImageWidth": 75,
-        "portraitImageHeight": 100,
-        "autoArrange": true,
-        "oneLine": true,
-        "maxChars": 0,
-        "maxWidth": 0,
-        "showAudios": true,
-        "showVideos": true,
-        "showDocuments": true,
-        "showImages": true,
-        "showLinks": true,
-        "showExternalContent": true,
-        "embedPortrait": true,
-        "preferLocalContent": true,
-        "portraitClip": true
+        "className": "section-title",
+        "text": "Manage Project Proposals",
+        "template": "",
+        "templateVariablesScript": ""
     }
 }
