--- a/app/configurationArchiveDetail.content.0.json
+++ b/app/configurationArchiveDetail.content.0.json
@@ -5,17 +5,24 @@
         "className": "",
         "viewType": "view",
         "namedView": "singleArchivedProjectListItemDetail",
+        "shouldRender": true,
+        "namedViewScript": "return namedView",
         "showInlineEdit": false,
         "namedFormView": "defaultFormView",
+        "formOptions": "{}",
         "showDeleteButton": false,
         "deleteItemScript": "",
-        "getItemListScript": "return ProjectTeam.CurrentTeam().getArchivedProjects();",
+        "formatModuleScript": "",
+        "resolveItemScript": "return item",
+        "filterModulesScript": "return list",
+        "itemButtonsScript": "return [];",
+        "insertAtTop": false,
+        "getItemListScript": "ProjectTeam.CurrentTeam().getArchivedProjects(callback);",
         "formatItemListScript": "return list;",
         "formatListItemModuleScript": "",
-        "formatModuleScript": "",
-        "itemButtonsScript": "return [];",
         "emptyNamedView": "emptyListView",
-        "namedViewScript": "return namedView",
-        "filterModulesScript": "return list"
+        "filterItemsScript": "return true;",
+        "sortItemsScript": "",
+        "maxItems": "-1"
     }
 }
