nickola -- Auto Commit - Changes made through Administrator Interface

--- a/app/UsersProjectSettings.1.title.0.json
+++ b/app/UsersProjectSettings.1.title.0.json
@@ -2,7 +2,7 @@
     "type": "WizardSteps",
     "config": {
         "iconValue": [],
-        "className": "",
+        "className": "user-settings",
         "manualValue": "1",
         "width": 460,
         "height": 250,
