nickola -- Auto Commit - Changes made through Administrator Interface

--- a/app/UsersProjectSettings.1.content.0.json
+++ b/app/UsersProjectSettings.1.content.0.json
@@ -5,7 +5,7 @@
         "label": "Receives notifications",
         "mandatory": false,
         "getValueScript": "return item.receiveNotifications();",
-        "updateValueScript": "",
+        "updateValueScript": "object.value=value",
         "submitValueScript": "wizardDataSet.receiveNotifications=object.value;",
         "validateValueScript": ""
     }
