nickola -- Auto Commit - Changes made through Administrator Interface

--- a/app/singleProjectPeopleListItemDetail.content.0.json
+++ b/app/singleProjectPeopleListItemDetail.content.0.json
@@ -4,14 +4,17 @@
         "className": "",
         "viewType": "view",
         "namedView": "singleProjectListItemDetail",
+        "shouldRender": true,
+        "namedViewScript": "return namedView",
         "showInlineEdit": false,
         "namedFormView": "defaultFormView",
+        "formOptions": "{}",
         "showDeleteButton": false,
         "deleteItemScript": "",
         "formatModuleScript": "",
         "resolveItemScript": "",
+        "filterModulesScript": "return list",
         "itemButtonsScript": "return [];",
-        "namedViewScript": "return namedView",
-        "filterModulesScript": "return list"
+        "insertAtTop": false
     }
 }
