--- a/app/singleProjectEditButtonsDetail.content.0.json
+++ b/app/singleProjectEditButtonsDetail.content.0.json
@@ -1,7 +1,7 @@
 {
     "type": "WizardScriptElement",
     "config": {
-        "script": "if(!item.isArchived()){\n    return null;\n}\nreturn new ModalFormButtonModule(application, item, {\n         \n            label: \"Edit\",\n            formOptions: {template:\"form\"},\n            formName: \"ProposalTemplate\",\n            \"class\": \"primary-btn\"\n\n    \n});\n",
+        "script": "if(item.isArchived()){\n    return null;\n}\nreturn new ModalFormButtonModule(application, item, {\n         \n            label: \"Edit\",\n            formOptions: {template:\"form\"},\n            formName: \"ProposalTemplate\",\n            \"class\": \"primary-btn\"\n\n    \n});\n",
         "identifier": "customScriptElement"
     }
 }
