--- a/app/configurationArchiveDetail.content.0.json
+++ b/app/configurationArchiveDetail.content.0.json
@@ -1,28 +1,13 @@
 {
-    "type": "UIListView",
+    "type": "DefaultDescription",
     "config": {
-        "listClassName": "",
         "className": "",
-        "viewType": "view",
-        "namedView": "singleArchivedProjectListItemDetail",
-        "shouldRender": true,
-        "namedViewScript": "return namedView",
-        "showInlineEdit": false,
-        "namedFormView": "defaultFormView",
-        "formOptions": "{}",
-        "showDeleteButton": false,
-        "deleteItemScript": "",
-        "formatModuleScript": "",
-        "resolveItemScript": "return item",
-        "filterModulesScript": "return list",
-        "itemButtonsScript": "return [];",
-        "insertAtTop": false,
-        "getItemListScript": "ProjectTeam.CurrentTeam().getArchivedProjects(callback);",
-        "formatItemListScript": "return list;",
-        "formatListItemModuleScript": "",
-        "emptyNamedView": "emptyListView",
-        "filterItemsScript": "return true;",
-        "sortItemsScript": "",
-        "maxItems": "-1"
+        "imageWidth": 300,
+        "imageHeight": 240,
+        "multiImageWidth": 100,
+        "multiImageHeight": 75,
+        "autoArrange": true,
+        "oneLine": true,
+        "maxChars": 0
     }
 }
