--- a/app/configurationArchiveDetail.content.0.json
+++ b/app/configurationArchiveDetail.content.0.json
@@ -1,13 +1,20 @@
 {
-    "type": "DefaultDescription",
+    "type": "UIView",
     "config": {
-        "className": "",
-        "imageWidth": 300,
-        "imageHeight": 240,
-        "multiImageWidth": 100,
-        "multiImageHeight": 75,
-        "autoArrange": true,
-        "oneLine": true,
-        "maxChars": 0
+        "className": "inset-menu-shading",
+        "viewType": "view",
+        "namedView": "archiveListView",
+        "shouldRender": true,
+        "namedViewScript": "return namedView",
+        "showInlineEdit": false,
+        "namedFormView": "defaultView",
+        "formOptions": "{}",
+        "showDeleteButton": false,
+        "deleteItemScript": "defaultBehaviorFn()",
+        "formatModuleScript": "",
+        "resolveItemScript": "return item",
+        "filterModulesScript": "return list",
+        "itemButtonsScript": "return [];",
+        "insertAtTop": false
     }
 }
