nickola -- Auto Commit - Changes made through Administrator Interface

--- a/app/configurationArchiveDetail.content.0.json
+++ b/app/configurationArchiveDetail.content.0.json
@@ -1,7 +1,7 @@
 {
     "type": "UIView",
     "config": {
-        "className": "inset-menu-shading",
+        "className": "inset-menu-shading no-sub-list-style",
         "viewType": "view",
         "namedView": "archiveListView",
         "shouldRender": true,
