--- a/app/singleProjectOverviewDetail.content.0.json
+++ b/app/singleProjectOverviewDetail.content.0.json
@@ -1,7 +1,8 @@
 {
     "type": "WizardScriptElement",
     "config": {
+        "name": "My Custom Script",
         "script": "\n\nreturn new ModuleArray([\n    new ElementModule(\"label\",{html:\"Tasks Completed\"}),\n    new ElementModule(\"div\",{html:item.getPercentComplete()+\"%\", \"class\":\"percent-complete-value\"}),\n    new ProgressBarModule({value:function(){ return item.getPercentComplete(); },\"class\":\"percent-complete\"})\n],{\"class\":\"progress\"});",
-        "identifier": "customScriptElement"
+        "description": "Info about my custom script"
     }
 }
