--- a/app/Tasks List Detail.content.0.json
+++ b/app/Tasks List Detail.content.0.json
@@ -1,7 +1,8 @@
 {
     "type": "WizardScriptElement",
     "config": {
+        "name": "My Custom Script",
         "script": "\n    var mod = new ElementModule('div',{\"class\":\"section-title\"});\n    mod.getElement().appendChild(new Element(\"span\",{\"html\":\"Tasks\"}));\n    return mod;",
-        "identifier": "customScriptElement"
+        "description": "Info about my custom script"
     }
 }
