--- a/app/Tasks Overview List Detail.content.0.json
+++ b/app/Tasks Overview List Detail.content.0.json
@@ -2,7 +2,7 @@
     "type": "WizardScriptElement",
     "config": {
         "name": "My Custom Script",
-        "script": "\n    var mod = new ElementModule('div',{\"class\":\"section-title\"});\n    mod.getElement().appendChild(new Element(\"span\",{\"html\":\"Tasks\"}));\n    return mod;",
+        "script": "\n    var mod = new ElementModule('div',{\"class\":\"section-title\"});\n    mod.getElement().appendChild(new Element(\"span\",{\"html\":\"Incomplete Tasks\"}));\n    return mod;",
         "description": "Info about my custom script"
     }
 }
