nickola -- Auto Commit - Changes made through Administrator Interface

--- a/app/configurationSettingsDetail.content.0.json
+++ b/app/configurationSettingsDetail.content.0.json
@@ -5,17 +5,24 @@
         "className": "",
         "viewType": "view",
         "namedView": "settingsListItemDetail",
+        "shouldRender": true,
+        "namedViewScript": "return namedView",
         "showInlineEdit": false,
         "namedFormView": "defaultFormView",
+        "formOptions": "{}",
         "showDeleteButton": false,
         "deleteItemScript": "",
-        "getItemListScript": "return [\n        {\n            label:\"User Roles\",\n            link:CoreContentUrlRoot+\"&option=com_geolive&controller=plugins&view=plugin&format=raw&plugin=UserInterface&pluginView=widget.form&widget=rolesicons\"\n\n        },\n        {\n            label:\"Task Types\",\n            link:CoreContentUrlRoot+\"&option=com_geolive&controller=plugins&view=plugin&format=raw&plugin=UserInterface&pluginView=widget.form&widget=194\"\n            \n        },{\n            label:\"UI Configuration\",\n            link:CoreContentUrlRoot+\"&option=com_geolive&controller=plugins&view=plugin&format=raw&plugin=UserInterface&pluginView=widget.form&widget=dashboardConfig\"\n\n        },\n        {\n            label:\"Layer Sets\",\n            link:CoreContentUrlRoot+\"&option=com_geolive&controller=plugins&view=plugin&format=raw&plugin=UserInterface&pluginView=widget.form&widget=113\"\n\n        },\n        {\n            label:\"Layer Groups\",\n            link:CoreContentUrlRoot+\"&option=com_geolive&controller=plugins&view=plugin&format=raw&plugin=UserInterface&pluginView=widget.form&widget=layerGroups\"\n\n        },\n        {\n            label:\"Tile Rendering Options\",\n            link:CoreContentUrlRoot+\"&option=com_geolive&controller=plugins&view=plugin&format=raw&plugin=UserInterface&pluginView=widget.form&widget=cluster-config\"\n\n        },\n        {\n            label:\"Marker Icons\",\n            link:CoreContentUrlRoot+\"&option=com_geolive&controller=plugins&view=plugin&format=raw&plugin=UserInterface&pluginView=widget.form&widget=mobile-app-markers\"\n\n        },\n        {\n            label:\"Mobile App Config\",\n            link:CoreContentUrlRoot+\"&option=com_geolive&controller=plugins&view=plugin&format=raw&plugin=UserInterface&pluginView=widget.form&widget=mobile-app-config\"\n\n        },\n        {\n            label:\"File Options\",\n            link:CoreContentUrlRoot+\"&option=com_geolive&controller=plugins&view=plugin&format=raw&plugin=UserInterface&pluginView=widget.form&widget=documentTypes\"\n        }\n        \n        \n    ];",
+        "formatModuleScript": "",
+        "resolveItemScript": "return item",
+        "filterModulesScript": "return list",
+        "itemButtonsScript": "return [];",
+        "insertAtTop": false,
+        "getItemListScript": "return [\n        {\n            label:\"User Roles\",\n            link:CoreContentUrlRoot+\"&option=com_geolive&controller=plugins&view=plugin&format=raw&plugin=UserInterface&pluginView=widget.form&widget=rolesicons\"\n\n        },\n        {\n            label:\"Task Types\",\n            link:CoreContentUrlRoot+\"&option=com_geolive&controller=plugins&view=plugin&format=raw&plugin=UserInterface&pluginView=widget.form&widget=194\"\n            \n        },{\n            label:\"UI Configuration\",\n            link:CoreContentUrlRoot+\"&option=com_geolive&controller=plugins&view=plugin&format=raw&plugin=UserInterface&pluginView=widget.form&widget=dashboardConfig\"\n\n        },\n        {\n            label:\"Layer Sets\",\n            link:CoreContentUrlRoot+\"&option=com_geolive&controller=plugins&view=plugin&format=raw&plugin=UserInterface&pluginView=widget.form&widget=113\"\n\n        },\n        {\n            label:\"Layer Groups\",\n            link:CoreContentUrlRoot+\"&option=com_geolive&controller=plugins&view=plugin&format=raw&plugin=UserInterface&pluginView=widget.form&widget=layerGroups\"\n\n        },\n        {\n            label:\"Tile Rendering Options\",\n            link:CoreContentUrlRoot+\"&option=com_geolive&controller=plugins&view=plugin&format=raw&plugin=UserInterface&pluginView=widget.form&widget=cluster-config\"\n\n        },\n        {\n            label:\"Mobile Marker Icons\",\n            link:CoreContentUrlRoot+\"&option=com_geolive&controller=plugins&view=plugin&format=raw&plugin=UserInterface&pluginView=widget.form&widget=mobile-app-markers\"\n\n        },\n        {\n            label:\"TUS Marker Icons\",\n            link:CoreContentUrlRoot+\"&option=com_geolive&controller=plugins&view=plugin&format=raw&plugin=UserInterface&pluginView=widget.form&widget=tus-markers\"\n\n        },\n        {\n            label:\"Mobile App Config\",\n            link:CoreContentUrlRoot+\"&option=com_geolive&controller=plugins&view=plugin&format=raw&plugin=UserInterface&pluginView=widget.form&widget=mobile-app-config\"\n\n        },\n        {\n            label:\"File Options\",\n            link:CoreContentUrlRoot+\"&option=com_geolive&controller=plugins&view=plugin&format=raw&plugin=UserInterface&pluginView=widget.form&widget=documentTypes\"\n        }\n        \n        \n    ];",
         "formatItemListScript": "return list;",
         "formatListItemModuleScript": "",
-        "formatModuleScript": "",
-        "itemButtonsScript": "return [];",
         "emptyNamedView": "emptyListView",
-        "namedViewScript": "return namedView",
-        "filterModulesScript": "return list"
+        "filterItemsScript": "return true;",
+        "sortItemsScript": "",
+        "maxItems": "-1"
     }
 }
