--- a/app/emptyTasksList.content.0.json
+++ b/app/emptyTasksList.content.0.json
@@ -1,9 +1,27 @@
 {
-    "type": "InlineHtml",
+    "type": "FormattedText",
     "config": {
-        "className": "section-title",
-        "text": "Get Started With Tasks",
-        "template": "",
-        "templateVariablesScript": ""
+        "textValueScript": "callback(ReferralManagementDashboard.getEmptyTasksListDescription());",
+        "formatModuleScript": "",
+        "className": "section-help",
+        "imageWidth": 300,
+        "imageHeight": 240,
+        "multiImageWidth": 100,
+        "multiImageHeight": 75,
+        "portraitImageWidth": 75,
+        "portraitImageHeight": 100,
+        "autoArrange": true,
+        "oneLine": true,
+        "maxChars": 0,
+        "maxWidth": 0,
+        "showAudios": true,
+        "showVideos": true,
+        "showDocuments": true,
+        "showImages": true,
+        "showLinks": true,
+        "showExternalContent": true,
+        "embedPortrait": true,
+        "preferLocalContent": true,
+        "portraitClip": true
     }
 }
