administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/singleProjectEditButtonsDetail.content.0.json
+++ b/app/singleProjectEditButtonsDetail.content.0.json
@@ -2,7 +2,7 @@
     "type": "WizardScriptElement",
     "config": {
         "name": "My Custom Script",
-        "script": "if(item.isArchived()){\n    return null;\n}\nreturn new ModalFormButtonModule(application, item, {\n         \n            label: \"Add Files\",\n            formOptions: {template:\"form\"},\n            formName: \"ProposalTemplate\",\n            \"class\": \"primary-btn\"\n\n    \n});\n",
+        "script": "if(item.isArchived()){\n    return null;\n}\nreturn new ModalFormButtonModule(application, item, {\n         \n            label: \"Edit\/Add files\",\n            formOptions: {template:\"form\"},\n            formName: \"ProposalTemplate\",\n            \"class\": \"primary-btn\"\n\n    \n});\n",
         "description": "Info about my custom script"
     }
 }
