--- a/app/singleProjectFilesDetail.content.0.json
+++ b/app/singleProjectFilesDetail.content.0.json
@@ -1,9 +1,30 @@
 {
-    "type": "InlineHtml",
+    "type": "UIListView",
     "config": {
-        "className": "section-title",
-        "text": "Documents",
-        "template": "",
-        "templateVariablesScript": ""
+        "listClassName": "",
+        "className": "",
+        "viewType": "view",
+        "namedView": "singleFilesSectionDetail ",
+        "shouldRender": true,
+        "namedViewScript": "return namedView",
+        "showInlineEdit": false,
+        "namedFormView": "defaultView",
+        "formOptions": "\"{}\"",
+        "showDeleteButton": false,
+        "deleteItemScript": "defaultBehaviorFn()",
+        "initModuleScript": "",
+        "formatModuleScript": "",
+        "resolveItemScript": "return item",
+        "filterModulesScript": "return list",
+        "itemButtonsScript": "return [];",
+        "insertAtTop": false,
+        "targetName": "",
+        "getItemListScript": "return ReferralManagementDashboard.getProjectFileSections(item);",
+        "formatItemListScript": "return list;",
+        "formatListItemModuleScript": "return item;",
+        "emptyNamedView": "emptyListView",
+        "filterItemsScript": "return true;",
+        "sortItemsScript": "",
+        "maxItems": "-1"
     }
 }
