administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/Main Projects Detail.content.0.json
+++ b/app/Main Projects Detail.content.0.json
@@ -11,10 +11,12 @@
         "formOptions": "{}",
         "showDeleteButton": false,
         "deleteItemScript": "",
+        "initModuleScript": "",
         "formatModuleScript": "console.log([\"projects menu list\", module, item]);",
         "resolveItemScript": "",
         "filterModulesScript": "return list",
         "itemButtonsScript": "return [];",
-        "insertAtTop": false
+        "insertAtTop": false,
+        "targetName": ""
     }
 }
