administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/Main Projects Detail.content.0.json
+++ b/app/Main Projects Detail.content.0.json
@@ -1,7 +1,7 @@
 {
     "type": "UIView",
     "config": {
-        "className": "inset-menu-shading left-panel",
+        "className": "dark-only-shading inset-menu-shading left-panel",
         "viewType": "view",
         "namedView": "projectsListDetail",
         "shouldRender": true,
