administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/singleProjectUsersDetail.content.0.json
+++ b/app/singleProjectUsersDetail.content.0.json
@@ -2,7 +2,7 @@
     "type": "UIListView",
     "config": {
         "listClassName": "",
-        "className": "user-item",
+        "className": "user-item section-module",
         "viewType": "view",
         "namedView": "singleUserListItemDetail",
         "shouldRender": true,
@@ -12,11 +12,13 @@
         "formOptions": "{}",
         "showDeleteButton": false,
         "deleteItemScript": "",
+        "initModuleScript": "",
         "formatModuleScript": "",
         "resolveItemScript": "return item;",
         "filterModulesScript": "return list",
         "itemButtonsScript": "return [];",
         "insertAtTop": false,
+        "targetName": "",
         "getItemListScript": "return item.getUsers();",
         "formatItemListScript": "return list;",
         "formatListItemModuleScript": "",
