administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/People Projects Detail.content.0.json
+++ b/app/People Projects Detail.content.0.json
@@ -4,6 +4,7 @@
         "className": "",
         "text": "Projects (People) Detail View",
         "template": "",
-        "templateVariablesScript": ""
+        "templateVariablesScript": "",
+        "formatTextScript": ""
     }
 }
