--- a/app/projectPriorityTasksDetail.content.0.json
+++ b/app/projectPriorityTasksDetail.content.0.json
@@ -2,7 +2,7 @@
     "type": "WizardScriptElement",
     "config": {
         "name": "My Custom Script",
-        "script": "\n\nreturn TaskItem.ProjectTaskMenuButtons();",
+        "script": "\n\nreturn TaskItem.ProjectTaskMenuButtons(item);",
         "description": "Info about my custom script"
     }
 }
