--- a/app/singleProjectTasksDetail.content.0.json
+++ b/app/singleProjectTasksDetail.content.0.json
@@ -2,7 +2,7 @@
     "type": "WizardScriptElement",
     "config": {
         "name": "My Custom Script",
-        "script": "\nreturn TaskItem.TaskFormMenuButtons(item);",
+        "script": "\nreturn TaskItem.ProjectTaskMenuButtons(item);",
         "description": "Info about my custom script"
     }
 }
