administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/Main Projects Detail.content.0.json
+++ b/app/Main Projects Detail.content.0.json
@@ -3,7 +3,7 @@
     "config": {
         "className": "dark-only-shading inset-menu-shading left-panel",
         "viewType": "view",
-        "namedView": "projectsListDetail",
+        "namedView": "splitProjectsDetail",
         "shouldRender": true,
         "namedViewScript": "return namedView",
         "showInlineEdit": false,
