administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/Main Projects Detail.content.0.json
+++ b/app/Main Projects Detail.content.0.json
@@ -1,22 +1,8 @@
 {
-    "type": "UIView",
+    "type": "WizardScriptElement",
     "config": {
-        "className": "dark-only-shading inset-menu-shading left-panel",
-        "viewType": "view",
-        "namedView": "splitProjectDetail",
-        "shouldRender": true,
-        "namedViewScript": "return namedView",
-        "showInlineEdit": false,
-        "namedFormView": "defaultFormView",
-        "formOptions": "{}",
-        "showDeleteButton": false,
-        "deleteItemScript": "",
-        "initModuleScript": "",
-        "formatModuleScript": "console.log([\"projects menu list\", module, item]);",
-        "resolveItemScript": "",
-        "filterModulesScript": "return list",
-        "itemButtonsScript": "return [];",
-        "insertAtTop": false,
-        "targetName": ""
+        "name": "My Custom Script",
+        "script": "return (new ProjectsOverviewNavigationMenu(application));",
+        "description": "Info about my custom script"
     }
 }
