administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/groupListsProjectDetail.content.0.json
+++ b/app/groupListsProjectDetail.content.0.json
@@ -1,19 +1,19 @@
 {
     "type": "UIView",
     "config": {
-        "className": "",
+        "className": "dark-only-shading inset-menu-shading left-panel",
         "viewType": "view",
-        "namedView": "defaultView",
+        "namedView": "projectsListDetail",
         "shouldRender": true,
         "namedViewScript": "return namedView",
         "showInlineEdit": false,
-        "namedFormView": "defaultView",
+        "namedFormView": "defaultFormView",
         "formOptions": "{}",
         "showDeleteButton": false,
-        "deleteItemScript": "defaultBehaviorFn()",
+        "deleteItemScript": "",
         "initModuleScript": "",
-        "formatModuleScript": "",
-        "resolveItemScript": "return item",
+        "formatModuleScript": "console.log([\"projects menu list\", module, item]);",
+        "resolveItemScript": "",
         "filterModulesScript": "return list",
         "itemButtonsScript": "return [];",
         "insertAtTop": false,
