administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/Projects Overview Detail.content.0.json
+++ b/app/Projects Overview Detail.content.0.json
@@ -2,7 +2,7 @@
     "type": "WizardScriptElement",
     "config": {
         "name": "My Custom Script",
-        "script": "return Proposal.ProjectSortMenuButtons(3)",
+        "script": "return ProjectList.SortMenuContent(3)",
         "description": "Info about my custom script"
     }
 }
