--- a/app/userProfileDetailProjects.content.0.json
+++ b/app/userProfileDetailProjects.content.0.json
@@ -2,7 +2,7 @@
     "type": "WizardScriptElement",
     "config": {
         "name": "My Custom Script",
-        "script": "\/*Projects Header*\/\n\n\nvar div = new Element('div',{\"class\":\"section-title project-list-btns\"});\ndiv.appendChild(new Element(\"span\",{\"html\":\"Projects\"}));\ndiv.appendChild(new Element(\"button\",{\"data-lbl\":\"New project\", \"class\":\"inline-btn add primary-btn\", \"events\":{\"click\":function(){\n    \n   \n            var formName=\"ProposalTemplate\";\n\n\t\t\tvar wizardTemplate = application.getDisplayController().getWizardTemplate(formName);\n\t\t\tif ((typeof wizardTemplate) != 'function') {\n\n\t\t\t\tif(window.console&&console.warn){\n\t\t\t\t\tconsole.warn('Expected named wizardTemplate: '+formName+', to exist');\n\t\t\t\t}\n\n\t\t\t}\n\t\t\tvar modalFormViewController =  new PushBoxModuleViewer(application, {});\n\t\t\tvar newItem=new Proposal();\n\t\t\tvar wizard = wizardTemplate(newItem, {});\n            wizard.buildAndShow(modalFormViewController, {template:\"form\"}); \n\t\t\t\n\t\t\t\n\t\t\tnewItem.addEvent(\"save:once\",function(){\n\t\t\t    ProjectTeam.CurrentTeam().addProject(newItem);\n\t\t\t})\n    \n    \n\n    \n    \n    \n    \n    \n    \n}}}));\nreturn div;",
+        "script": "\/*Projects Header*\/\n\n\nvar div = new Element('div',{\"class\":\"section-title\"});\ndiv.appendChild(new Element(\"span\",{\"html\":\"Projects\"}));\nreturn [div, ProjectList.HeaderMenuContent(item)];",
         "description": "Info about my custom script"
     }
 }
