--- a/app/groupListsProjectDetail.content.0.json
+++ b/app/groupListsProjectDetail.content.0.json
@@ -13,7 +13,7 @@
         "deleteItemScript": "",
         "initModuleScript": "",
         "formatModuleScript": "console.log([\"projects menu list\", module, item]);",
-        "resolveItemScript": "return new ProjectList({\n    label:\"Projects pending approval\"\n})",
+        "resolveItemScript": "return new ProjectList({\n    label:\"Projects pending approval\",\n    showCreateBtn:false\n})",
         "filterModulesScript": "return list",
         "itemButtonsScript": "return [];",
         "insertAtTop": false,
