--- a/app/groupListsProjectDetail.content.0.json
+++ b/app/groupListsProjectDetail.content.0.json
@@ -2,7 +2,7 @@
     "type": "WizardScriptElement",
     "config": {
         "name": "My Custom Script",
-        "script": "return ProjectList.HeaderMenuContent();",
+        "script": "var div= ProjectList.HeaderMenuContent();\ndiv.addClass('header-hieght');\n\n\nreturn div;",
         "description": "Info about my custom script"
     }
 }
