--- a/app/singleProjectFilesDetail.content.0.json
+++ b/app/singleProjectFilesDetail.content.0.json
@@ -1,30 +1,8 @@
 {
-    "type": "UIListView",
+    "type": "WizardScriptElement",
     "config": {
-        "listClassName": "",
-        "className": "",
-        "viewType": "view",
-        "namedView": "singleFilesSectionDetail",
-        "shouldRender": true,
-        "namedViewScript": "return namedView",
-        "showInlineEdit": false,
-        "namedFormView": "defaultView",
-        "formOptions": "\"{}\"",
-        "showDeleteButton": false,
-        "deleteItemScript": "defaultBehaviorFn()",
-        "initModuleScript": "",
-        "formatModuleScript": "",
-        "resolveItemScript": "return item",
-        "filterModulesScript": "return list",
-        "itemButtonsScript": "return [];",
-        "insertAtTop": false,
-        "targetName": "",
-        "getItemListScript": "return ReferralManagementDashboard.getProjectFileSections(item);",
-        "formatItemListScript": "return list;",
-        "formatListItemModuleScript": "\nchildView.getElement().addClass(child.parentClassName)\nreturn item;",
-        "emptyNamedView": "emptyListView",
-        "filterItemsScript": "return true;",
-        "sortItemsScript": "",
-        "maxItems": "-1"
+        "name": "My Custom Script",
+        "script": "return (new ProjectFilesNavigationMenu(application));",
+        "description": "Info about my custom script"
     }
 }
