--- a/app/importProjectsForm.1.footer.0.json
+++ b/app/importProjectsForm.1.footer.0.json
@@ -7,8 +7,8 @@
         "showFinish": true,
         "showCancel": true,
         "showBack": true,
-        "labelForCancel": "cancel",
-        "labelForSubmit": "submit",
+        "labelForCancel": "Cancel",
+        "labelForSubmit": "Import",
         "labelForNext": "next",
         "labelForPrevious": "previous",
         "formatButton": "return button;"
