administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/importProjectsForm.1.content.0.json
+++ b/app/importProjectsForm.1.content.0.json
@@ -9,7 +9,7 @@
         "showImages": true,
         "showDocuments": true,
         "showVideos": true,
-        "className": "only-docs",
+        "className": "only-docs no-text",
         "maxChars": 0,
         "showExpandInput": true,
         "toolbarPosition": "bottom",
