administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/importProjectsForm.1.content.0.json
+++ b/app/importProjectsForm.1.content.0.json
@@ -1,7 +1,7 @@
 {
     "type": "WizardDescriptionField",
     "config": {
-        "label": "Add Csv File",
+        "label": "Upload Projects CSV File",
         "message": "add a description",
         "lines": 3,
         "mandatory": false,
