--- a/app/projectTypeSelectionForm.1.content.0.json
+++ b/app/projectTypeSelectionForm.1.content.0.json
@@ -1,10 +1,8 @@
 {
-    "type": "WizardTitleField",
+    "type": "WizardScriptElement",
     "config": {
-        "label": "Title",
-        "message": "add a title",
-        "className": "",
-        "maxChars": 0,
-        "textFormatScript": ""
+        "name": "My Custom Script",
+        "script": " var div=new Element('div');\n \n div.appendChild(new Element('button', {html:\"Create a Dataset\"}));\n div.appendChild(new Element('button', {html:\"Create a Collection\"}));\n \n \n \n return div;",
+        "description": "Info about my custom script"
     }
 }
