administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/singleProjectListItemTableDetail.content.0.json
+++ b/app/singleProjectListItemTableDetail.content.0.json
@@ -4,6 +4,6 @@
         "loadAsync": false,
         "fieldLabelScript": "return \"\";",
         "fieldValueScript": "return item.getName();",
-        "formatElementScript": "el.addClass(\"inline\");"
+        "formatElementScript": "el.addClass(\"inline\");\nel.setAttribute(\"data-col\",\"name\");"
     }
 }
