--- a/app/documentProjectForm.1.title.0.json
+++ b/app/documentProjectForm.1.title.0.json
@@ -2,16 +2,16 @@
     "type": "WizardSteps",
     "config": {
         "className": "",
+        "showSteps": true,
         "manualValue": "1",
         "iconValue": [],
         "width": 599,
         "height": 411,
         "labelMethod": "auto",
+        "closable": false,
         "elasticity": true,
         "fitContent": true,
-        "minHeight": 200,
         "minWidth": 400,
-        "showSteps": true,
-        "closable": false
+        "minHeight": 200
     }
 }
