--- a/app/splitProjectDetail.content.0.json
+++ b/app/splitProjectDetail.content.0.json
@@ -13,7 +13,7 @@
         "deleteItemScript": "",
         "initModuleScript": "",
         "formatModuleScript": "console.log([\"projects menu list\", module, item]);",
-        "resolveItemScript": "\nif(item instanceof ProjectList){\n    return item;\n}\n\n\nreturn new ProjectList({\n    label:\"Projects\",\n    showCreateBtn:true,\n    filter:null,\n    invertfilter:false\n})",
+        "resolveItemScript": "\nif(item instanceof ProjectList){\n    return item;\n}\n\nif(item&&item.label){\n    return new ProjectList(item);\n}\n\n\nreturn new ProjectList({\n    label:\"Projects\",\n    showCreateBtn:true,\n    filter:null,\n    invertfilter:false\n})",
         "filterModulesScript": "return list",
         "itemButtonsScript": "return [];",
         "insertAtTop": false,
