--- a/app/singleProjectListItemTableDetail.content.0.json
+++ b/app/singleProjectListItemTableDetail.content.0.json
@@ -4,6 +4,7 @@
         "loadAsync": false,
         "fieldLabelScript": "return \"\";",
         "fieldValueScript": "return item.getName();",
-        "formatElementScript": "el.addClass(\"inline\");\nel.setAttribute(\"data-col\",\"name\");"
+        "formatElementScript": "el.addClass(\"inline\");\nel.setAttribute(\"data-col\",\"name\");",
+        "identifier": ""
     }
 }
