administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/singleProjectListItemTableDetail.content.0.json
+++ b/app/singleProjectListItemTableDetail.content.0.json
@@ -2,7 +2,7 @@
     "type": "FieldValue",
     "config": {
         "loadAsync": false,
-        "identifier": "",
+        "identifier": "col-name",
         "fieldLabelScript": "return \"\";",
         "fieldValueScript": "return item.getName();",
         "formatElementScript": "el.addClass(\"inline\");\nel.setAttribute(\"data-col\",\"name\");"
