administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/singleProjectListItemTableDetail.content.0.json
+++ b/app/singleProjectListItemTableDetail.content.0.json
@@ -5,6 +5,6 @@
         "identifier": "col-icon",
         "fieldLabelScript": "return \"\";",
         "fieldValueScript": "return \"\";",
-        "formatElementScript": ""
+        "formatElementScript": "el.addClass(\"inline icon\");\n\/\/el.setAttribute(\"data-col\",\"name\");"
     }
 }
