--- a/app/singleProjectMapDetail.content.0.json
+++ b/app/singleProjectMapDetail.content.0.json
@@ -2,7 +2,7 @@
     "type": "WizardScriptElement",
     "config": {
         "name": "My Custom Script",
-        "script": "\n\n\nwindow.GetSpatialFiles=function(){\n    \n    \n    var spatial= item.getSpatialDocuments();\n    \n    if(item.getProjectObjects){\n        item.getProjectObjects().forEach(function(i){\n            spatial=spatial.concat(i.getSpatialDocuments());\n        });\n    }\n    \n    return spatial;\n}\n\nreturn null;\n\nvar iframe= new ElementModule('iframe',{\n    \"src\":\"https:\/\/wabun.geolive.ca\/wabun-map\/embed\",\n    \"height\":\"100%\",\n    \"width\":\"100%\",\n    \"frameborder\":\"0\",\n    \"styles\":{\"min-height\":\"700px\"},\n    \"allowfullscreen\":true\n});\n\/\/return '<iframe src=\"https:\/\/wabun.geolive.ca\/wabun-map\/embed\" width=\"100%\" height=\"100%\" frameborder=\"0\" style=\"min-height:700px;\"><\/iframe>';\n\n\n\n\/\/return '<iframe src=\"https:\/\/wabun.geolive.ca\/wabun-map\/embed\" width=\"100%\" height=\"100%\" frameborder=\"0\" style=\"min-height:700px;\"><\/iframe>';\n\nvar setSize=function(){\n    var size=window.getSize();\n    iframe.getElement().setStyle('height',size.y+\"px\");\n    \n};\nwindow.addEvent('resize', setSize);\nsetSize();\n\nreturn iframe;\n\n",
+        "script": "\n\nreturn SpatialProject.InitCurrentProject(item);\n\n",
         "description": "Info about my custom script"
     }
 }
