administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/singleProjectUsersDetail.content.0.json
+++ b/app/singleProjectUsersDetail.content.0.json
@@ -3,6 +3,7 @@
     "config": {
         "listClassName": "",
         "className": "user-item section-module",
+        "identifier": "",
         "viewType": "view",
         "namedView": "singleUserListItemDetail",
         "shouldRender": true,
