administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/documentProjectForm.1.children.2.children.2.content.0.json
+++ b/app/documentProjectForm.1.children.2.children.2.content.0.json
@@ -2,7 +2,7 @@
     "type": "InlineHtml",
     "config": {
         "className": "",
-        "text": "<h2>Collection Permissions<\/h2>",
+        "text": "<h2>Collection Permissions And Access<\/h2>",
         "template": "",
         "templateVariablesScript": "",
         "formatTextScript": ""
